--- a/widgets/package.json
+++ b/widgets/package.json
@@ -10,8 +10,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
+    "hchs-vue-charts": "1.2.8",
     "vue": "^2.5.11",
-    "vue-i18n": "^7.6.0"
+    "vue-chartjs": "^3.3.1",
+    "vue-charts": "^0.2.1",
+    "vue-i18n": "^7.6.0",
+    "vue-tabs-component": "^1.4.0"
   },
   "browserslist": [
     "> 1%",
